package characters;

public interface Attacker {
    void attack(Character target);
}


