package characters;

import items.Damage;

public interface Defender {
    int defend(Damage incoming);
}


