package characters;


    public abstract class Monster extends Character {
        public Monster(String name, int maxHealth) {
            super(name, maxHealth);
        }
    }


