package engine;

public interface GameIO {
    String readLine();
    void printLine(String text);
}

