package items;

public enum DamageType {
    PHYSICAL, FIRE, ICE, POISON
}
