package items;

public enum Rarity {
    COMMON, RARE, EPIC
}
